tests/success/testcaseSucessoDecAtrOutput.g
int a, b, c;

programa {
    a = b = c = 10;
    escreva "O valor de a e: ";
    escreva a;
    novalinha;
    escreva "O valor de b e: ";
    escreva b;
    novalinha;
}