tests/error/testcaseErroSubDoisTipos.g
int x;
car c;

programa {
    x = 5;
    c = 'a';

    x = c - x;

    se (c == 5) entao
        escreva "impossivel";
    senao
        escreva "ok";
}